updated code to get values in skill_survey

--- a/views/transformation.html
+++ b/views/transformation.html
@@ -48,7 +48,7 @@
   <div class="block-center">
     <p>REVEL<br> Transformation Community Survey</p>
 </div>
-<table id="transformationTable" align="left" cellspacing="0" border="0">
+<table id="transformationTable" align="left" cellspacing="0" border="0" style="margin:30px;">
 	<colgroup width="393"></colgroup>
 	<colgroup span="2" width="535"></colgroup>
 	<colgroup width="158"></colgroup>
