related to required restriction

--- a/views/transformation.html
+++ b/views/transformation.html
@@ -40,12 +40,9 @@
     }
 
     .quest{
-        font-size: 20px;
-        color: black;
         /*color: #2196f3;*/
         margin: 24px;
-        margin-left: 20px;
-        font-family: "Roboto",arial,sans-serif;
+        margin-left: 30px;
     }
 
     .wrapper {
@@ -68,12 +65,12 @@
 	<b>RANK YOUR SKILLS:</b><br />
 	<br />
 	<b>Level 0 | NO EXPERIENCE</b>
-	\\ No experience in this area
+	No experience in this area
 
 	<b>Level 1 | COMPETENT</b>
-	"\\ Have done some work in this area
-	\\ Am familiar w/basic principles and ideas; but have not delivered work 
-	\\ Would require additional support to deliver work "
+	Have done some work in this area
+	Am familiar w/basic principles and ideas; but have not delivered work 
+	Would require additional support to deliver work "
 	<br />
 	<b>Level 2 | PROFICIENT</b> 
 	You can do most things with the tool or capability as a developer or functional SME. You may not be able to be the Senior resource or lead an effort in this space, but you can be a solid contributor to the team and add significant value.
