updated code according to db

--- a/views/human_resources.html
+++ b/views/human_resources.html
@@ -597,7 +597,7 @@ p{
                 <option>9th</option>
               </select>
               <br /><br /><br />
-              <button onclick="addHumanElement()" style="margin-bottom: 55px;">Submit</button>
+              <button onclick="addHumanElement(); return false;" style="margin-bottom: 55px;">Submit</button>
             </div>
         </div>
       </div>
