--- a/views/transformation.html
+++ b/views/transformation.html
@@ -3624,9 +3624,139 @@
 	            </select></center>
 	    </td>	
 	</tr>
+  <tr id="pm_sk_ee_other2">
+    <td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><input type="text" face="Arial" color="#000000" placeholder="Other"></input></td>
+        <td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
+    <td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
+        <td style="border-left: 1px solid #808080; border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
+          <center><select class="select form-control" id="cc_sk_pms_VersionOne_exp" name="cc_sk_pms_VersionOne_exp">
+                   <option value="N/A">
+                    N/A
+                   </option>
+                   <option value="Project Experience">
+                    Project Experience
+                   </option>
+                   <option value="General Education">
+                    General Education
+                   </option>
+                </select></center>
+        </td>
+      <td style="border-right: 1px solid #808080" align="right" valign=bottom bgcolor="#FFFFFF" sdval="4" sdnum="1033;">
+        <center><select class="select form-control" id="cc_sk_pms_VersionOne_level" name="cc_sk_pms_VersionOne_level">
+                   <option selected value>
+                   -- select your Level -- 
+                   </option>
+                   <option value="1 - Introductory">
+                    1 - Introductory
+                   </option>
+                   <option value="2 - Basic">
+                    2 - Basic
+                   </option>
+                   <option value="3 - Proficient">
+                    3 - Proficient
+                   </option>
+                   <option value="4 - Advanced">
+                    4 - Advanced
+                   </option>
+                   <option value="5 - Mastery">
+                    5 - Mastery
+                   </option>
+              </select></center>
+      </td>
+      <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
+        <center><select class="select form-control" id="cc_sk_pms_VersionOne_cert" name="cc_sk_pms_VersionOne_cert">
+                     <option value="NO">
+                      NO
+                     </option>
+                     <option value="YES">
+                      YES
+                     </option>
+              </select></center>
+      </td>
+      <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
+        <center><select class="select form-control" id="cc_sk_pms_VersionOne_interest" name="cc_sk_pms_VersionOne_interest">
+                     <option value="0 - Avoid">
+                      0 - Avoid
+                     </option>
+                     <option value="1 - Develop">
+                      1 - Develop 
+                     </option>
+                     <option value="2 - Engage">
+                      2 - Engage
+                     </option>
+                     <option value="3 - Accelerate">
+                      3 - Accelerate
+                     </option>
+              </select></center>
+      </td> 
+  </tr>
 
-
-	</tr>
+    <tr id="pm_sk_ee_other3">
+    <td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#FFFFFF"><input type="text" face="Arial" color="#000000" placeholder="Other"></input></td>
+        <td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
+    <td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
+        <td style="border-left: 1px solid #808080; border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
+          <center><select class="select form-control" id="cc_sk_pms_VersionOne_exp" name="cc_sk_pms_VersionOne_exp">
+                   <option value="N/A">
+                    N/A
+                   </option>
+                   <option value="Project Experience">
+                    Project Experience
+                   </option>
+                   <option value="General Education">
+                    General Education
+                   </option>
+                </select></center>
+        </td>
+      <td style="border-right: 1px solid #808080" align="right" valign=bottom bgcolor="#FFFFFF" sdval="4" sdnum="1033;">
+        <center><select class="select form-control" id="cc_sk_pms_VersionOne_level" name="cc_sk_pms_VersionOne_level">
+                   <option selected value>
+                   -- select your Level -- 
+                   </option>
+                   <option value="1 - Introductory">
+                    1 - Introductory
+                   </option>
+                   <option value="2 - Basic">
+                    2 - Basic
+                   </option>
+                   <option value="3 - Proficient">
+                    3 - Proficient
+                   </option>
+                   <option value="4 - Advanced">
+                    4 - Advanced
+                   </option>
+                   <option value="5 - Mastery">
+                    5 - Mastery
+                   </option>
+              </select></center>
+      </td>
+      <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
+        <center><select class="select form-control" id="cc_sk_pms_VersionOne_cert" name="cc_sk_pms_VersionOne_cert">
+                     <option value="NO">
+                      NO
+                     </option>
+                     <option value="YES">
+                      YES
+                     </option>
+              </select></center>
+      </td>
+      <td style="border-right: 1px solid #808080" align="left" valign=bottom bgcolor="#FFFFFF">
+        <center><select class="select form-control" id="cc_sk_pms_VersionOne_interest" name="cc_sk_pms_VersionOne_interest">
+                     <option value="0 - Avoid">
+                      0 - Avoid
+                     </option>
+                     <option value="1 - Develop">
+                      1 - Develop 
+                     </option>
+                     <option value="2 - Engage">
+                      2 - Engage
+                     </option>
+                     <option value="3 - Accelerate">
+                      3 - Accelerate
+                     </option>
+              </select></center>
+      </td> 
+  </tr>
 	<tr>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="20" align="left" valign=bottom bgcolor="#404040"><font face="Arial" color="#FFFFFF">Project Management Suites</font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#404040"><font face="Arial" color="#FFFFFF"><br></font></td>
@@ -7913,7 +8043,7 @@
 	    </td>
 		
 	</tr>
-	<tr id="de_p_mb_Native">
+	<tr id="de_p_mb_Hybrid">
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" height="21" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000">Hybrid</font></td>
 				<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
 		<td style="border-top: 1px solid #d0cece; border-bottom: 1px solid #d0cece; border-left: 1px solid #d0cece; border-right: 1px solid #d0cece" align="left" valign=bottom bgcolor="#FFFFFF"><font face="Arial" color="#000000"><br></font></td>
