updated admin capability.

--- a/views/analytics.html
+++ b/views/analytics.html
@@ -18174,8 +18174,11 @@
 </table>
 <div class="container">
   <div class="row">
-    <div id="button">
+    <div id="add_button">
       <button onclick="addAnalyticsEmpSkill()" style="margin-bottom: 20px; margin-top: 20px;">Submit</button>
+    </div>
+    <div id="update_button">
+      <button onclick="updateAnalyticsEmpSkill()" style="margin-bottom: 20px; margin-top: 20px;" hidden>Update</button>
     </div>
   </div>
 </div>
