--- a/views/admin_capability.html
+++ b/views/admin_capability.html
@@ -141,7 +141,7 @@
         </div> 
         <form id = "admin_capability_form">
             <h1 class="block-left">Employees</h1>
-            <div>
+            <div id = "update_emp">
             <table style="margin-left:100px;" id = "employees_table" class="table table-bordered table-hover table-condensed block-left">
                 <thead>
                     <tr>
@@ -158,7 +158,15 @@
             </tbody>
             </table>
 
-            </div>        
+            </div>
+            <div id = "analytics">
+                
+
+            </div>
+            
+            <div id = "transformation">
+                
+            </div>
         </form>
     </body>
 </html>
