updated update_analytics and update_transformation

--- a/views/analytics.html
+++ b/views/analytics.html
@@ -49,7 +49,7 @@
     }
   </style>
 </head>    
-<body>
+<body onload="check()">
   <body>
   <div class="block-center">
     <p>REVEL<br> Analytics Skills Survey</p>
@@ -18174,11 +18174,11 @@
 </table>
 <div class="container">
   <div class="row">
-    <div id="add_button">
+    <div id="analytics_add_button">
       <button onclick="addAnalyticsEmpSkill()" style="margin-bottom: 20px; margin-top: 20px;">Submit</button>
     </div>
-    <div id="update_button">
-      <button onclick="updateAnalyticsEmpSkill()" style="margin-bottom: 20px; margin-top: 20px;" hidden>Update</button>
+    <div id="analytics_update_button" hidden>
+      <button onclick="updateAnalyticsEmpSkill()" style="margin-bottom: 20px; margin-top: 20px;">Update</button>
     </div>
   </div>
 </div>
