--- a/views/transformation.html
+++ b/views/transformation.html
@@ -107,7 +107,7 @@
   <br />
 </div>
 
-<table id="transformationTable" align="left" cellspacing="0" border="0" style="margin:30px;">
+<table class="test" id="transformationTable" align="left" cellspacing="0" border="0" style="margin:30px;">
 	<colgroup width="393"></colgroup>
 	<colgroup span="2" width="535"></colgroup>
 	<colgroup width="158"></colgroup>
