--- a/views/admin_capability.html
+++ b/views/admin_capability.html
@@ -151,6 +151,7 @@
                         <th> Is Active </th>
                         <th> Update Record  </th>
                         <th>  Update Skills </th>
+                        <th>  Update Human Elements Form </th>
                         <th> Delete Record </th>
                     </tr>
                 </thead>
