--- a/views/human_resources.html
+++ b/views/human_resources.html
@@ -130,7 +130,7 @@ p{
 </style>
 
 <body onload="check()">
-  <div id = "mainPage">
+  <div id = "mainPage" class="main">
       <div class="block-center">
           <p>REVEL<br> Human Element Survey</p>
       </div>
@@ -148,13 +148,13 @@ p{
             <br />
             <div class="col-xs-2">
               <label style="color: #2196f3;" for="climber">Climber (0-100%)</label>
-              <input type=number min=0 max=100 class="form-control" id="personality_climber">
+              <input type=number min=0 max=100 class="form-control" id="personality_Climber">
               <br />
               <label style="color: #2196f3;" for="dreamer">Dreamer (0-100%)</label>
-              <input type=number min=0 max=100 class="form-control" id="personality_dreamer">
+              <input type=number min=0 max=100 class="form-control" id="personality_Dreamer">
               <br />
               <label style="color: #2196f3;" for="purist">Purist (0-100%)</label>
-              <input type=number min=0 max=100 class="form-control" id="personality_purist">
+              <input type=number min=0 max=100 class="form-control" id="personality_Purist">
             </div>
 
             <br /><br /><br /><br /><br />
@@ -169,7 +169,7 @@ p{
             <br />
             <div class="col-xs-2">
               <label style="color: #2196f3;" for="self">Self (1-5)</label>
-                <center><select class="select form-control" id="satisfaction_self">
+                <center><select class="select form-control" id="satisfaction_Self">
                    <option value="1">
                     1
                    </option>
@@ -188,7 +188,7 @@ p{
             </select></center>
               <br />
               <label style="color: #2196f3;" for="project">Project (1-5)</label>
-                              <center><select class="select form-control" id = "satisfaction_project">
+                              <center><select class="select form-control" id = "satisfaction_Project">
                    <option value="1">
                     1
                    </option>
@@ -207,7 +207,7 @@ p{
             </select></center>
               <br />
               <label style="color: #2196f3;" for="client">Client (1-5)</label>
-              <center><select class="select form-control" id = "satisfaction_client">
+              <center><select class="select form-control" id = "satisfaction_Client">
                    <option value="1">
                     1
                    </option>
@@ -226,7 +226,7 @@ p{
             </select></center>
               <br />
               <label style="color: #2196f3;" for="community">Community (1-5)</label>
-                <center><select class="select form-control" id="satisfaction_community">
+                <center><select class="select form-control" id="satisfaction_Community">
                    <option value="1">
                     1
                    </option>
@@ -245,7 +245,7 @@ p{
             </select></center>
               <br />
               <label style="color: #2196f3;" for="revel">Revel (1-5)</label>
-                <center><select class="select form-control" id="satisfaction_revel">
+                <center><select class="select form-control" id="satisfaction_Revel">
                    <option value="1">
                     1
                    </option>
@@ -264,7 +264,7 @@ p{
             </select></center>
               <br />
               <label style="color: #2196f3;" for="career">Career (1-5)</label>
-                <center><select class="select form-control" id="satisfaction_career">
+                <center><select class="select form-control" id="satisfaction_Career">
                    <option value="1">
                     1
                    </option>
@@ -342,7 +342,7 @@ p{
             <br />
             <br />
             <label style="color: #2196f3; width: 75px;" for="chameleon">Chameleon</label>
-            <input id="habit_Chameleon to Peacock" type="text"
+            <input class='form-control' id="habit_Chameleon to Peacock" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -354,7 +354,7 @@ p{
             <label style="color: #2196f3;" for="peacock">Peacock</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="gatherer">Gatherer</label>
-            <input id="habit_Gatherer to Hunter" type="text"
+            <input class='form-control' id="habit_Gatherer to Hunter" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -366,7 +366,7 @@ p{
             <label style="color: #2196f3;" for="hunter">Hunter</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="ambiguity">Ambiguity</label>
-            <input id="habit_Ambiguity to Structure" type="text"
+            <input class='form-control' id="habit_Ambiguity to Structure" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -378,7 +378,7 @@ p{
             <label style="color: #2196f3;" for="structure">Structure</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="introvert">Introvert</label>
-            <input id="habit_Introvert to Extrovert" type="text"
+            <input class='form-control' id="habit_Introvert to Extrovert" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -390,7 +390,7 @@ p{
             <label style="color: #2196f3;" for="extrovert">Extrovert</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="morning_lark">Morning Lark</label>
-            <input id="habit_Morning Lark to Night Owl" type="text"
+            <input class='form-control' id="habit_Morning Lark to Night Owl" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -402,7 +402,7 @@ p{
             <label style="color: #2196f3;" for="night_owl">Night Owl</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="evolution">Evolution</label>
-            <input id="habit_Evolution to Revolution" type="text"
+            <input class='form-control' id="habit_Evolution to Revolution" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -414,7 +414,7 @@ p{
             <label style="color: #2196f3;" for="revolution">Revolution</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="script">Script</label>
-            <input id="habit_Script to Improv" type="text"
+            <input class='form-control' id="habit_Script to Improv" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -426,7 +426,7 @@ p{
             <label style="color: #2196f3;" for="improve">Improve</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="think">Think</label>
-            <input id="habit_Think to Do" type="text"
+            <input class='form-control' id="habit_Think to Do" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -438,7 +438,7 @@ p{
             <label style="color: #2196f3;" for="do">Do</label>
             <br /> <br /> <br />
             <label style="color: #2196f3; width: 75px;" for="build">Build</label>
-            <input id="habit_Build to Improve" type="text"
+            <input class='form-control' id="habit_Build to Improve" type="text"
               data-provide="slider"
               data-slider-ticks="[1, 2, 3, 4, 5]"
               data-slider-ticks-labels='["1", "2", "3", "4", "5"]'
@@ -471,7 +471,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="autonomy">Autonomy</label>
-              <select class="form-control" id="motivation_autonomy">
+              <select class="form-control" id="motivation_Autonomy">
                 <option>2nd</option>
                 <option>3rd</option>
                 <option>4th</option>
@@ -485,7 +485,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="work_life_balance">Work/Life Balance</label>
-              <select class="form-control" id="motivation_work/Life Balance">
+              <select class="form-control" id="motivation_Work/Life Balance">
                 <option>3rd</option>
                 <option>4th</option>
                 <option>5th</option>
@@ -499,7 +499,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="influencing">Influencing</label>
-              <select class="form-control" id="motivation_influencing">
+              <select class="form-control" id="motivation_Influencing">
                 <option>4th</option>
                 <option>5th</option>
                 <option>6th</option>
@@ -513,7 +513,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="mastery">Mastery</label>
-              <select class="form-control" id="motivation_mastery">
+              <select class="form-control" id="motivation_Mastery">
                 <option>5th</option>
                 <option>6th</option>
                 <option>7th</option>
@@ -528,7 +528,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="money">Money</label>
-              <select class="form-control" id="motivation_money">
+              <select class="form-control" id="motivation_Money">
                 <option>6th</option>
                 <option>7th</option>
                 <option>8th</option>
@@ -542,7 +542,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="praise">Praise</label>
-              <select class="form-control" id="motivation_praise">
+              <select class="form-control" id="motivation_Praise">
                 <option>7th</option>
                 <option>8th</option>
                 <option>9th</option>
@@ -556,7 +556,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="problem_solving">Problem-Solving</label>
-              <select class="form-control" id="motivation_problem_solving">
+              <select class="form-control" id="motivation_Problem">
                 <option>8th</option>
                 <option>9th</option>
                 <option>10th</option>
@@ -570,7 +570,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="purpose">Purpose</label>
-              <select class="form-control" id="motivation_purpose">
+              <select class="form-control" id="motivation_Purpose">
                 <option>9th</option>
                 <option>10th</option>
                 <option>1st</option>
@@ -584,7 +584,7 @@ p{
               </select>
               <br />
               <label style="color: #2196f3;" for="relationships">Relationships</label>
-              <select class="form-control" id="motivation_relationships">
+              <select class="form-control" id="motivation_Relationships">
                 <option>10th</option>
                 <option>1st</option>
                 <option>2nd</option>
