--- a/views/analytics.html
+++ b/views/analytics.html
@@ -3,13 +3,14 @@
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="stylesheets/sweetalert2.min.css" type="text/css" media="screen" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet"> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="stylesheets/jquery.dataTables.min.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
+    <script type="text/javascript" charset="utf-8" src="javascripts/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script>
-    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
-    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
+    <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>    
+
     <style type="text/css">
     body,div,table,thead,tbody,tfoot,tr,th,td,p { font-family:"Calibri"; font-size:small }
     a.comment-indicator:hover + comment { background:#ffd; position:absolute; display:block; border:1px solid black; padding:0.5em;  } 
