--- a/views/human_resources.html
+++ b/views/human_resources.html
@@ -1,19 +1,20 @@
 <html>
 <head>
-    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="stylesheets/sweetalert2.min.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="stylesheets/sweetalert2.min.css" type="text/css" media="screen"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
-    <link href="https://cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet"> 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="stylesheets/jquery.dataTables.min.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
+    <link rel="stylesheet" href="stylesheets/bootstrap-slider.css" type="text/css" media="screen"/> 
+    <script type="text/javascript" charset="utf-8" src="javascripts/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script>
-    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.1/css/bootstrap-slider.css" rel="stylesheet"> 
-    <!-- <link rel="stylesheet" src="stylesheets/bootstrap-slider.css" type="text/css" /> -->
+    <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="javascripts/bootstrap-slider.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
 </head>
+
+
 
 <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
 
