--- a/views/index.html
+++ b/views/index.html
@@ -123,6 +123,10 @@ p{
                     <label for="user"><h4>Please Enter Your Name :</h4></label>
                     <input type="text" class="form-control" id="user" required>
                 </div>
+                <div class="form-group">
+                    <label for="email"><h4>Please Enter Your Email :</h4></label>
+                    <input type="text" class="form-control" id="email" required>
+                </div>
 
                 <span class="group-btn">    
                   <a style="max-width:226px;" href="#" class="button" id = 'communityAnalyticsButton' onclick="showCommunityAnalytics()">Analytics Community <i class="fa fa-sign-in"></i></a>
