--- a/views/admin_capability.html
+++ b/views/admin_capability.html
@@ -162,6 +162,7 @@
                     <tr>
                         <th> Employee Id  </th>
                         <th> Employee Name </th>
+                        <th> Email </th>
                         <th> Community </th>
                         <th> Is Active </th>
                         <th> Update Record  </th>
