--- a/views/index.html
+++ b/views/index.html
@@ -35,6 +35,11 @@
         margin: 0 auto;
         width: 100%;
     }
+    .block-center {
+        max-width: 420px;
+        margin: 0 auto;
+        width: 100%;
+    }
 
     .button {
       display: inline-block;
@@ -115,6 +120,14 @@ p{
 <body>
   <div id = "mainPage">
     <div>
+        <div>
+              <a href="/logout" style="
+                float: right;
+                padding-right: 50px;
+                color: white;
+                font-weight: bold;">Log Out
+              </a>
+        </div>
         <div class="block-center">
             <p>REVEL<br> Talent Optimization</p>
             <div class="wrapper">
