Updated the changes in UI.

--- a/views/admin_capability.html
+++ b/views/admin_capability.html
@@ -5,6 +5,7 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
         <link rel="stylesheet" href="stylesheets/jquery.dataTables.min.css" type="text/css" media="screen"/>
         <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
+        <link rel="icon" type="image/png" href="images/tab_logo.png">
         <script type="text/javascript" charset="utf-8" src="javascripts/jquery.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
         <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
@@ -144,12 +145,13 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     
                       <div class="block-center">
-                        <p>REVEL<br> Admin Capability </p>
+                        <img src="images/logo_white.png" style="margin-top: 10%; margin-left: 20%" />
+                        <p style="color:#ED5127;margin-bottom: 10%">Admin Capability</p>
                       </div>  
                     
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/logout">Log Out</a></li>
+                        <li><a style="color:#ED5127; font-weight: bold; " href="/logout">Log Out</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
