--- a/views/analytics.html
+++ b/views/analytics.html
@@ -1,10 +1,12 @@
 <html>
 <head>
+    <title>Analytics Skills Survey</title>
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="stylesheets/sweetalert2.min.css" type="text/css" media="screen" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="stylesheets/jquery.dataTables.min.css" type="text/css" media="screen"/>
-    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
+    <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
+    <link rel="icon" type="image/png" href="images/tab_logo.png">
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
@@ -40,7 +42,6 @@
     p{
         font-size: 30px;
         text-align: center;
-        /*color: white;*/
         color: #2196f3;
         margin: 24px 0;
         font-family: "Roboto",arial,sans-serif;
@@ -53,7 +54,8 @@
 <body onload="check()">
   <body>
   <div class="block-center">
-    <p>REVEL<br> Analytics Skills Survey</p>
+    <img src="images/logo_white.png" style="margin-top: 10%; margin-left: 20%" />
+    <p style="color:#ED5127;margin-bottom: 10%">Analytics Skills Survey</p>
 </div>
 <div class="quest">
   <b>WHAT DO THESE LEVELS MEAN??</b><br />
