--- a/views/human_resources.html
+++ b/views/human_resources.html
@@ -1,11 +1,13 @@
 <html>
 <head>
+    <title>Human Element Survey</title>
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="stylesheets/sweetalert2.min.css" type="text/css" media="screen"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
     <link rel="stylesheet" href="stylesheets/jquery.dataTables.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
-    <link rel="stylesheet" href="stylesheets/bootstrap-slider.css" type="text/css" media="screen"/> 
+    <link rel="stylesheet" href="stylesheets/bootstrap-slider.css" type="text/css" media="screen"/>
+    <link rel="icon" type="image/png" href="images/tab_logo.png"> 
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
@@ -133,7 +135,8 @@ p{
 <body onload="check()">
   <div id = "mainPage" class="main">
       <div class="block-center">
-          <p>REVEL<br> Human Element Survey</p>
+        <img src="images/logo_white.png" style="margin-top: 10%; margin-left: 20%" />
+          <p style="color:#ED5127;margin-bottom: 10%">Human Element Survey</p>
       </div>
       <form id = "humanElement" enctype='multipart/form-data'>
       <div style="margin: 15; margin-left: 100px;">
