--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,8 @@
 <html>
     <head>
-        <title>Login Here</title>
+        <title>Login Talent Optimization</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="icon" type="image/png" href="images/tab_logo.png">
     </head>
 
     <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
@@ -9,17 +10,17 @@
         <style type="text/css">
             body {
               /*background-color:#fff;*/
-              background-color:#36a1d5;
+              background-color:#081D3E;
               -webkit-font-smoothing: antialiased;
               font: normal 14px sans-serif;
           }
 
         .block{
-            background: #36a1d5; /* Old browsers */
-            background: -moz-linear-gradient(top, #36a1d5 0%, #3073b4 100%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top, #36a1d5 0%,#3073b4 100%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom, #36a1d5 0%,#3073b4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#36a1d5', endColorstr='#3073b4',GradientType=0 );
+            background: #081D3E; /* Old browsers */
+            background: -moz-linear-gradient(top, #081D3E 0%, #3073b4 100%); /* FF3.6-15 */
+            background: -webkit-linear-gradient(top, #081D3E 0%,#3073b4 100%); /* Chrome10-25,Safari5.1-6 */
+            background: linear-gradient(to bottom, #081D3E 0%,#3073b4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#081D3E', endColorstr='#3073b4',GradientType=0 );
             padding: 10px 20px 30px 20px;
         }
         .block-center {
@@ -106,7 +107,8 @@
     <body class="container">
         <div class="block-center">
             <div class="block-center">
-                <p>REVEL<br> Talent Optimization</p>
+                <img src="images/logo.png" style="margin-top: 10%; margin-bottom: 10%; margin-left: 11%" />
+                <p style="color:#ED5127;margin-bottom: 10%">Talent Optimization</p>
             </div>
         </div>
         <div class="container row block-center">
