--- a/views/transformation.html
+++ b/views/transformation.html
@@ -1,12 +1,14 @@
 <html>
 
   <head>
+    <title>Transformation Skills Survey</title>
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="stylesheets/sweetalert2.min.css" type="text/css" media="screen"/>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/jquery.dataTables.min.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" /> 
-    <link rel="stylesheet" href="stylesheets/bootstrap-slider.css" type="text/css" media="screen"/> 
+    <link rel="stylesheet" href="stylesheets/bootstrap-slider.css" type="text/css" media="screen"/>
+    <link rel="icon" type="image/png" href="images/tab_logo.png">
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
@@ -56,7 +58,8 @@
 </head>    
 <body onload="check()">
   <div class="block-center">
-    <p>REVEL<br> Transformation Skills Survey</p>
+    <img src="images/logo_white.png" style="margin-top: 10%; margin-left: 20%" />
+    <p style="color:#ED5127;margin-bottom: 10%">Transformation Skills Survey</p>
 </div>
 
 <div class="quest">
