--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Talent Optimization</title>
+    <title>Talent Analytics Platform</title>
     <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="stylesheets/sweetalert2.min.css" type="text/css" media="screen"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
@@ -128,7 +128,7 @@ p{
         </div>
         <div class="block-center">
             <img src="images/logo.png" style="margin-top: 10%; margin-bottom: 10%; margin-left: 11%" />
-            <p  style="color: #ED5127;margin-bottom: 10%">Talent Optimization</p>
+            <p  style="color: #ED5127;margin-bottom: 10%">Talent Analytics Platform</p>
             <div class="wrapper">
               <div class="container row block-center">          
                 <div class="jumbotron col-sm-4 pull-center block-center" style="margin-bottom: 10%">
