--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Login Talent Optimization</title>
+        <title>Login Talent Analytics Platform</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="images/tab_logo.png">
     </head>
@@ -108,7 +108,7 @@
         <div class="block-center">
             <div class="block-center">
                 <img src="images/logo.png" style="margin-top: 10%; margin-bottom: 10%; margin-left: 11%" />
-                <p style="color:#ED5127;margin-bottom: 10%">Talent Optimization</p>
+                <p style="color:#ED5127;margin-bottom: 10%">Talent Analytics Platform</p>
             </div>
         </div>
         <div class="container row block-center">
