updated html headers with doc type.

--- a/views/admin_capability.html
+++ b/views/admin_capability.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" />
@@ -11,7 +12,7 @@
         <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
         <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
-    </head>
+    
 
 
     <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
@@ -137,7 +138,7 @@
         margin-bottom: 100px;
     }
     </style>
-
+</head>
     <body onload="getEmployees()">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
