--- a/views/human_resources.html
+++ b/views/human_resources.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Human Element Survey</title>
@@ -14,7 +15,7 @@
     <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="javascripts/bootstrap-slider.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
-</head>
+
 
 
 
@@ -131,7 +132,7 @@ p{
 }
 
 </style>
-
+</head>
 <body onload="check()">
   <div id = "mainPage" class="main">
       <div class="block-center">
