--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Talent Analytics Platform</title>
@@ -12,7 +13,7 @@
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
-</head>
+
 
 <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
 
@@ -113,7 +114,7 @@ p{
 }
 
 </style>
-
+</head>
 <body class="container">
   <div id = "mainPage">
     <div>
