--- a/views/login.html
+++ b/views/login.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Login Talent Analytics Platform</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="icon" type="image/png" href="images/tab_logo.png">
-    </head>
 
     <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
 
@@ -104,6 +104,8 @@
     }
 
     </style>
+
+</head>
     <body class="container">
         <div class="block-center">
             <div class="block-center">
