Working in edge, IE, chrome and safari.

--- a/views/admin_capability.html
+++ b/views/admin_capability.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
         <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
         <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
     
 
 
