--- a/views/analytics.html
+++ b/views/analytics.html
@@ -12,7 +12,8 @@
     <script type="text/javascript" charset="utf-8" src="javascripts/client.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
-    <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>    
+    <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>   
+    <script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
 
     <style type="text/css">
     body,div,table,thead,tbody,tfoot,tr,th,td,p { font-family:"Calibri"; font-size:small }
