--- a/views/human_resources.html
+++ b/views/human_resources.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="javascripts/bootstrap-slider.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
 
 
 
