--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" charset="utf-8" src="javascripts/sweetalert2.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
 
 
 <style>.bootstrap-iso .formden_header h2, .bootstrap-iso .formden_header p, .bootstrap-iso form{font-family: Arial, Helvetica, sans-serif; color: black}.bootstrap-iso form button, .bootstrap-iso form button:hover{color: white !important;} .asteriskField{color: red;}</style>
@@ -143,12 +144,12 @@ p{
                   </div>
 
                   <span class="group-btn">    
-                    <a style="max-width:226px; font-weight:bold;" href="#" class="button" id = 'communityAnalyticsButton' onclick="showCommunityAnalytics()">Analytics Community <i class="fa fa-sign-in"></i></a>
+                    <a style="max-width:226px; font-weight:bold;" href="#" class="button" id = 'communityAnalyticsButton' onclick="showCommunityAnalytics();">Analytics Community <i class="fa fa-sign-in"></i></a>
                   </span>
                   <br>
                   <br>
                   <span class="group-btn">    
-                    <a href="#" style="max-width:226px; font-weight:bold;" class="button" id = 'communityTransformationButton' onclick="showCommunityTransformation()"> Transformation Community <i class="fa fa-sign-in"></i></a>
+                    <a href="#" style="max-width:226px; font-weight:bold;" class="button" id = 'communityTransformationButton' onclick="showCommunityTransformation();"> Transformation Community <i class="fa fa-sign-in"></i></a>
                   </span>
                 </div>
               </div>
