--- a/views/transformation.html
+++ b/views/transformation.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" charset="utf-8" src="javascripts/notify.min.js"></script> 
     <script type="text/javascript" charset="utf-8" src="javascripts/bootstrap-slider.js"></script>
     <script type="text/javascript" charset="utf-8" src="javascripts/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="javascripts/core.js"></script>
 
     <style type="text/css">
     body,div,table,thead,tbody,tfoot,tr,th,td,p { font-family:"Calibri"; font-size:small }
