--- a/views/index.html
+++ b/views/index.html
@@ -114,6 +114,37 @@ p{
     text-align: center;
 }
 
+.customConfirmSwalBtn{
+    background-color: #3085d6;
+    border-left-color: #3085d6;
+    border-right-color: #3085d6;
+    border: 0;
+    border-radius: 3px;
+    box-shadow: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 17px;
+    font-weight: 500;
+    margin: 30px 5px 0px 5px;
+    padding: 10px 32px;
+  }
+
+.customCancelSwalBtn{
+    background-color: #d33;
+    border-left-color: #d33;
+    border-right-color: #d33;
+    border: 0;
+    border-radius: 3px;
+    box-shadow: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 17px;
+    font-weight: 500;
+    margin: 30px 5px 0px 5px;
+    padding: 10px 32px;
+  }
+
+
 </style>
 </head>
 <body class="container">
