--- a/views/add_std.html
+++ b/views/add_std.html
@@ -200,7 +200,7 @@
                   <div class="col-md-12">
                     <div class="panel panel-default panel-table">
                       <div class="panel-heading">
-                        <div class="row">
+                        <div class="row search-row">
                           <div class="form-group col-md-3 ">
                             <label class="control-label" for="card-number">Gr No.</label>
                             <input class="form-control input-sm" id="gr_num" name="gr_num" type="text" placeholder="GR Number" >
